@@ -89,6 +89,9 @@ BUGFIXES:
   ZOOKEEPER-2340: JMX is disabled even if JMXDISABLE is false
   (Arshad Mohammad via rgs)
 
+  ZOOKEEPER-2252: Random test case failure in
+  org.apache.zookeeper.test.StaticHostProviderTest (Timothy Ward via cnauroth)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-2270: Allow MBeanRegistry to be overridden for better unit tests
